syntax = "proto3";

package vn.grpc.nodejs.user.service;

service UserService {
  rpc signUp (SignUpDTO) returns (BaseResponse) {}
}

message SignUpDTO {
  string email = 1;
  string password = 2;
}

message BaseResponse {
  int32 status = 1;
  string message = 2;
  BasicToken data = 3;
}

message BasicToken {
  string basicToken = 1;
}
